--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "ha-powercard",
-  "version": "2.0.0",
-  "description": "A distribution board style power flow visualization card for Home Assistant with full GUI editor",
+  "version": "2.1.0",
+  "description": "Distribution board style power flow visualization card for Home Assistant",
   "main": "dist/ha-powercard.js",
   "scripts": {
-    "build": "echo 'No build step required - vanilla JS'",
-    "lint": "eslint src/",
-    "release": "npm version patch && git push --follow-tags"
+    "build": "echo 'No build step required - vanilla JS'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rellis-erigon/HA-Powercard.git"
+    "url": "https://github.com/rellis-erigon/HA-Powercard.git"
   },
   "keywords": [
     "home-assistant",
     "lovelace",
     "custom-card",
-    "power-flow",
-    "distribution-board",
-    "energy-monitoring",
+    "power",
+    "energy",
     "solar",
     "battery",
-    "gui-editor"
+    "distribution-board"
   ],
   "author": "rellis-erigon",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rellis-erigon/HA-Powercard/issues"
-  },
-  "homepage": "https://github.com/rellis-erigon/HA-Powercard#readme"
+  "license": "MIT"
 }
